# RentaPtoMonttKedro

./: ArriendoWebScrapping.pbix  README-antiguo.md  README.md  Selenium.py  arriendos_puerto_montt.csv  pyproject.toml  requirements.txt
conf/: README.md
conf/base/: catalog.yml
data/: arriendos_puerto_montt.xlsx  arriendos_puerto_montt_limpio.xlsx
data-antiguo/: arriendos_puerto_montt.xlsx
data/01_raw/: arriendos_puerto_montt.xlsx
data/02_intermediate/: arriendos_puerto_montt_processed.xlsx
notebooks/: Limpieza.ipynb
notebooks-antiguo/: Limpieza.ipynb
reports-antiguo/: ArriendoWebScrapping.pbix
src/: API_UF.py  Limpieza.py  Web_Scraping_Selenium.py
src/rentaptomonttkedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/rentaptomonttkedro/pipelines/data_engineering/: __init__.py  nodes.py  pipeline.py
src/rentaptomonttkedro/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
