[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "rentaptomonttkedro"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
rentaptomonttkedro = "rentaptomonttkedro.__main__:main"

[tool.kedro]
package_name = "rentaptomonttkedro"
project_name = "RentaPtoMonttKedro"
kedro_init_version = "1.0.0"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "rentaptomonttkedro.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
